# mandelbrot-explorer

./: Cargo.toml  README.md  package-lock.json  package.json
public/: index.html
src/: index.js  lib.rs  main.rs  shader.wgsl  ui.rs
