[package]
name = "mandelbrot-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
egui = "0.22.0"
egui-wgpu = { version = "0.22.0", features = ["winit"] }
egui-winit = "0.22.0"
env_logger = "0.10.0"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.16.3"
winit = "0.28.6"
